# rusty-kaspa

./: .gitignore  Cargo.toml
wallet/igra/: .gitignore  2-phase-algo-v1-current.md  CODE-GUIDELINE.md  Cargo.toml  HYPERLANE-INTEGRATION.md  Hex-Refactor.md  Hyperlane-devnet.md  Kaspa-Signers-Hyperlane-HowTo.md  KeyManager-Design.md  README-DOCS.md  TWO-PHASE-PROTOCOL-IMPLEMENTATION.md  UTXO_CONSENSUS_PROBLEM.md
wallet/igra/artifacts/: igra-config.ini  igra-config.toml  igra-prod.ini  igra-prod.toml
wallet/igra/book/: .gitignore  book.toml
wallet/igra/book/src/: SUMMARY.md  intro.md
wallet/igra/book/src/appendix/: faq.md  glossary.md
wallet/igra/book/src/configuration/: hyperlane.md  iroh-discovery.md  network-modes.md
wallet/igra/book/src/developer/: building.md  code-guidelines.md
wallet/igra/book/src/getting-started/: installation.md  quickstart.md
wallet/igra/book/src/protocol/: architecture.md  two-phase.md
wallet/igra/book/src/security/: README.md  key-management.md  timing-attacks.md
wallet/igra/docs/: CONFIG_REFACTORING.md  DEAD-CODE.md  DERIVATION.md  FOLLOWUP-TODO-FIXES.md  README.md  SOC2.md  TODO-FIXES.md  TWO-PHASE-PROTOCOL-EXPERT-REVIEW.md  TWO-PHASE-PROTOCOL.md  configuration-reference.md  configuration.md  passphrase-rotation.md  protocol.md  pskt.md  quickstart-devnet.md  secrets-and-keys.md
wallet/igra/docs/api/: kaspa-threshold-signing-api-docs.md
wallet/igra/docs/architecture/: DB_SCHEMA.md  STATE_MACHINE.md
wallet/igra/docs/config/: CONFIG-REFACTORING-NOTES.md  INDEX.md  MAINNET-TEMPLATE-README.md  README.md  REFACTORING-SUMMARY.md  config.md  environment-variables.md  iroh-discovery.md  mainnet-config-template.toml  secrets-config.md  service-config.md
wallet/igra/docs/core/: README.md
wallet/igra/docs/dev/: README.md  crdt-gossip-fixes.md  git-history-refactor.md  hyperlane-devnet-script-review.md  mainnet-mnemonics-forbidden.md  passphrase-rotation.md  pskt-sigop-count-REVIEW-SUMMARY.md  pskt-sigop-count-REVIEW.md  refactor-general.md  refactoring-todos.md  secrets-bin-format.md
wallet/igra/docs/dev-proc/: BUGS.md  DAY-1-SCRIPT.sh  DI-Step-1.md  DI-Step-10.md  DI-Step-11.md  DI-Step-13.md  DI-Step-15.md  DI-Step-16.md  DI-Step-19.md  DI-Step-28.md  DI-Step-31.md  DI-Step-5.md  DI-Step-7.md  DI-WHAT-TO-DO-NOW.md  REFACTOR-STATUS.md  SESSION-CONTEXT.md  START-HERE.md
wallet/igra/docs/dev-proc-refactoring/: ARCHITECTURE-DOMAIN-INFRASTRUCTURE.md  BUGS-FOUND.md  IGRA-SERVICE-DEEP-DIVE.md  NEW_ARCH-IMPROVEMENTS.md  NEW_BUGS.md  REFACTOR-COMPLETE.md  REFACTOR-GAPS.md  TEST-BUGS.md
wallet/igra/docs/dev_proc_logs/: Kaspa-Logger-Integration.md  LOGGING_IMPROVEMENTS.md  LOGS-HEAVEN.md
wallet/igra/docs/guide/: quickstart.md
wallet/igra/docs/hyperlane/: Hyperlane-v3.md  IgraHyperlaneRelayerAPI.md
wallet/igra/docs/legacy/: CLEANUPS.md  CRDT-IMPLEMENTATION-GUIDE.md  DOMAIN_LOGGING_REFACTOR.md  README.md  REFACTOR_FOR_FOOLS.md
wallet/igra/docs/legacy/architecture/: Architecture-Improvements-GEMINI.md
wallet/igra/docs/legacy/archive/: README.md
wallet/igra/docs/legacy/checklists/: V1-LAUNCH-CHECKLIST.md
wallet/igra/docs/legacy/config-meta/: iroh-discovery-gaps.md  iroh-discovery-review.md  iroh-discovery-summary.md  network-modes-gaps.md  network-modes-verification.md
wallet/igra/docs/legacy/dev-proc-refactoring/: ARCHITECTURE-TESTING.md  (+1 more)
wallet/igra/docs/ops/: README.md  monitoring.md
wallet/igra/docs/overview/: kaspa-threshold-signing-overview.md
wallet/igra/docs/protocol/: two-phase-consensus.md  two-phase-implementation.md
wallet/igra/docs/security/: CIS-IG1-Plan.md  KEYS_MANAGEMENT.md  SECURITY-FIXES-REQUIRED.md  SECURITY-FIXES-SUMMARY.md  SECURITY_FIXES_IMPLEMENTED.md  THREAT_MODEL.md  key-management-audit.md  key-management-extended-audit.md  key-management-refactor.md  raw-privkey-feature.md  security-issues-remediation.md  security-quick-check.md  timing-attacks-checklist.md  timing-attacks-library-proof.md  timing-attacks-overview.md  timing-attacks-quick-fix.md
wallet/igra/docs/service/: API_REFERENCE.md  Flows.md  INTEGRATION.md  README.md  SECURITY.md
wallet/igra/docs/specs/: kaspa-threshold-signing-spec-refined.md
wallet/igra/docs/testing/: INTEGRATION.md
wallet/igra/docs/v2/: Design-2-Exec-Plan.md  Desing-2.md
wallet/igra/docs/wip/: Automatic-Utxo-Consolidation.md  Config-Refactor.md  Domain-and-Network-IDs-Hyperlane.md  Kaspa-Standardness-Mass-Checks.md  testnet-v1.md
wallet/igra/docs2/: INDEX.md  README.md
wallet/igra/docs2/overview/: 01-what-is-igra.md  02-use-cases.md  03-how-it-works.md  04-faq.md
wallet/igra/igra-core/: Cargo.toml
wallet/igra/igra-core/benches/: crdt_operations.rs
wallet/igra/igra-core/fuzz/: Cargo.toml
wallet/igra/igra-core/src/: constants.rs  error.rs  group_id.rs  hd.rs  lib.rs  lifecycle.rs  model.rs  rate_limit.rs  state_machine.rs  types.rs
wallet/igra/igra-core/tests/: architecture.rs  hyperlane_ini_validation.rs  hyperlane_ism.rs  integration.rs  integration_configs.rs  unit.rs
wallet/igra/igra-service/: Cargo.toml
wallet/igra/igra-service/benches/: integration_perf.rs
wallet/igra/igra-service/src/: lib.rs
wallet/igra/igra-service/tests/: api.rs  concurrent_sessions.rs  coordinator_failure.rs  hyperlane_iroh_flow.rs  hyperlane_rpc.rs  integration.rs  integration_cryptography.rs  integration_determinism.rs  integration_flows.rs  integration_performance.rs  integration_policy.rs  integration_rpc.rs  integration_security.rs  integration_storage.rs  iroh_transport.rs  rpc_integration.rs  timeout_scenarios.rs  two_of_three_flow.rs  v1_service_integration.rs
wallet/igra/orchestration/devnet/: .env  Hyperlane-EVM-recipientAddress.md  LOCAL_EVM_HYPERLANE_E2E.md  Makefile  README.md  devnet-keys.json  docker-compose.yml  hyperlane-keys.json  igra-devnet-template.toml  igra-devnet.ini  igra-devnet.toml  multisig-addresses.txt
wallet/igra/orchestration/testnet/: .env-example  .gitignore  Makefile  PREREQS.md  README.md
wallet/igra/scripts/: check-architecture.sh  convert-ini-to-toml.py  security-audit.sh
wallet/igra/src/: lib.rs
(+497 files in other folders)
