[package]
name = "igra-core"
description = "Igra core primitives and coordination"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
async-stream.workspace = true
bincode.workspace = true
blake3 = "1.5.1"
borsh.workspace = true
configparser = "1.0.0"
ed25519-dalek = "2.1.1"
futures-util.workspace = true
hex.workspace = true
kaspa-addresses.workspace = true
kaspa-bip32.workspace = true
kaspa-consensus-core.workspace = true
kaspa-grpc-client.workspace = true
kaspa-rpc-core.workspace = true
kaspa-txscript.workspace = true
kaspa-wallet-core.workspace = true
kaspa-wallet-pskt.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
subtle = "2.5"
thiserror.workspace = true
tokio.workspace = true
tracing = "0.1.40"
zeroize.workspace = true
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo.git", branch = "main", optional = true }
secp256k1 = { workspace = true, features = ["recovery"] }
uuid = { version = "1.11.0", features = ["v4", "serde"], optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[features]
default = ["hyperlane", "layerzero"]
hyperlane = ["dep:hyperlane-core", "dep:uuid"]
layerzero = []
