[package]
name = "igra-core"
description = "Igra core primitives and coordination"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
async-stream.workspace = true
bincode.workspace = true
blake3 = "1.5.1"
borsh.workspace = true
log = "0.4"
log4rs = { version = "1.2", features = ["gzip"] }
ed25519-dalek = "2.1.1"
figment = { version = "0.10", features = ["toml", "env"] }
futures-util.workspace = true
hex.workspace = true
once_cell.workspace = true
kaspa-addresses.workspace = true
kaspa-bip32.workspace = true
kaspa-consensus-core.workspace = true
kaspa-core.workspace = true
kaspa-grpc-client.workspace = true
kaspa-rpc-core.workspace = true
kaspa-notify.workspace = true
kaspa-txscript.workspace = true
kaspa-wallet-core.workspace = true
kaspa-wallet-pskt.workspace = true
kaspa-wallet-keys.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
subtle = "2.5"
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true
parking_lot = "0.12"
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo.git", branch = "main", optional = true }
secp256k1 = { workspace = true, features = ["recovery"] }
uuid = { version = "1.11.0", features = ["v4", "serde"], optional = true }
rand.workspace = true
iroh = "0.95.1"
iroh-gossip = "0.95.0"
iroh-base = "0.95.1"

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

[features]
default = ["hyperlane", "layerzero"]
hyperlane = ["dep:hyperlane-core", "dep:uuid"]
layerzero = []

[[bin]]
name = "devnet-keygen"
path = "src/bin/devnet-keygen.rs"

[[bin]]
name = "devnet-balance"
path = "src/bin/devnet-balance.rs"
