[package]
name = "igra-service"
description = "Igra service runtime and transport"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
axum = "0.7.7"
bincode.workspace = true
blake3 = "1.5.1"
clap = { version = "4.5.18", features = ["derive"] }
ed25519-dalek = "2.1.1"
futures-util.workspace = true
hex.workspace = true
igra-core = { path = "../igra-core" }
iroh = { version = "0.95.1" }
iroh-gossip = { version = "0.95.0" }
iroh-base = { version = "0.95.1" }
kaspa-wallet-pskt.workspace = true
kaspa-wallet-core.workspace = true
kaspa-consensus-core.workspace = true
kaspa-addresses.workspace = true
log = "0.4"
prometheus = "0.13.3"
rand.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle = "2.5"
tokio = { workspace = true, features = ["fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo.git", branch = "main" }
uuid = { version = "1.11.0", features = ["v4"] }
alloy = { version = "0.7.3", features = ["full"] }
serde_yaml = "0.9"

[features]
default = []
hyperlane = []
devnet-env-secrets = ["igra-core/devnet-env-secrets"]

[dev-dependencies]
kaspa-bip32.workspace = true
kaspa-addresses.workspace = true
kaspa-txscript.workspace = true
tempfile.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
criterion = "0.5"
sha3 = "0.10"
sysinfo = "0.30"
tower = "0.4"
hyper = "1"
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo.git", branch = "main" }
igra-core = { path = "../igra-core", features = ["test-utils"] }

[[bench]]
name = "integration_perf"
harness = false

[[bin]]
name = "kaspa-threshold-service"
path = "src/bin/kaspa-threshold-service.rs"

[[bin]]
name = "fake_hyperlane_ism_api"
path = "src/bin/fake_hyperlane_ism_api.rs"

[[bin]]
name = "hyperlane_anvil_sender"
path = "src/bin/hyperlane_anvil_sender.rs"
